# STM32duino-bootloader

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: arm-gcc-toolchain.cmake
tools/scripts/: gitversion.py  jlink_flasher.py
